# glrfw

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt
resources/: basic.frag  basic.vert  depth.frag  depth.vert  ground.frag  ground.vert  lines.frag  lines.vert  pixel.frag  pixel.vert  point.frag  point.vert  quad.frag  quad.vert  shadow.frag  shadow.vert
src/: CMakeLists.txt  Makefile  buffer.hpp  config.h.in  error.cpp  error.hpp  glutils.cpp  glutils.hpp  handle.hpp  helper.hpp  main.cpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp
test/: CMakeLists.txt  handle.cpp  shader.cpp
